[package]
name = "keyrock"
version = "0.1.0"
authors = ["Roberto Torres <ts.roberto@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3.15"
futures-util = "0.3"
url = "2.0.0"
futures-channel = "0.3"

[dev-dependencies]
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
env_logger = "0.9"